Geschwindigkeit in separate Tabelle ausgelagert

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -32,6 +32,10 @@ table, th, td {
     margin-right: 10px;
 }
 
+#velocityTable {
+  margin-bottom: 10px;
+}
+
 /*Leaflet Map*/
 #map {
   width: 700px;
