--- a/views/index.hbs
+++ b/views/index.hbs
@@ -103,6 +103,23 @@
     </tbody>
 </table>
 
+<table id="velocityTable">
+    <thead>
+        <tr>
+            <th>Average Velocity in km/h</th>
+            <th>Distance in m</th>
+            <th>Time in s</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td id="velocity"></td>
+            <td id="distance"></td>
+            <td id="time"></td>
+        </tr>
+    </tbody>
+</table>
+
 <table id="detailsTable">
     <thead>
         <tr>
@@ -116,10 +133,6 @@
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <td style="font-weight: bold">Average Velocity in km/h</td>
-            <td id="geschwindigkeit" colspan="6"></td>
-        </tr>
         <tr>
             <td id="dateTime0"></td>
             <td id="phase0"></td>
