--- a/views/index.hbs
+++ b/views/index.hbs
@@ -207,3 +207,10 @@
         </tr>
     </tbody>
 </table>
+
+
+<script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
+<script src="http://api3.geo.admin.ch/loader.js?lang=en" type="text/javascript"></script>
+<script type="text/javascript" src="/javascripts/wgs84_ch1903.js"></script>
+<script type="text/javascript" src="/javascripts/initMap.js"></script>
+<script type="text/javascript" src="/javascripts/manualTaggingServerCalls.js"></script>
