Resultat anzeigen funktioniert

--- a/views/TestingFeedback.hbs
+++ b/views/TestingFeedback.hbs
@@ -10,4 +10,9 @@
 <button id="getNewStatus">GetNewTestStatus</button>
 
 
+<form method="get" action="/testResults">
+    <button style="visibility: hidden" id="showResultsButton" type="submit">Show Results</button>
+</form>
+
+
 <script type="text/javascript" src="/javascripts/getTestStatus.js"></script>
