--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
-<div id="map"></div>
+<div id="mapOsm"></div>
 
-<div id="mapGeoAdmin" class="map"></div>
+<div id="mapGeoAdmin"></div>
 
 
 <form action="/tagMeasurement" method="post">
