--- a/views/resultOfTests.hbs
+++ b/views/resultOfTests.hbs
@@ -5,20 +5,14 @@
 <table>
     <thead>
         <tr>
-            <th>Total correctness in percent</th>
+            <th>Total correctness</th>
             <th>Correctness of Location in percent</th>
-            <th>Correctness of Surrounding in percent</th>
-            <th>Correctness of Type of Motion in percent</th>
-            <th>Correctness of Population Density in percent</th>
         </tr>
     </thead>
     <tbody>
         <tr>
             <td>{{total}}</td>
             <td>{{location}}</td>
-            <td>{{surrounding}}</td>
-            <td>{{typeOfMotion}}</td>
-            <td>{{populationDensity}}</td>
         </tr>
     </tbody>
 </table>
