Testserver auf aktuellste Tagging-Server Version angepasst

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -92,6 +92,7 @@
             <th>Horizontal Accuracy</th>
             <th>Vertical Accuracy</th>
             <th>Altitude</th>
+            <th>CellID</th>
         </tr>
     </thead>
     <tbody>
@@ -103,6 +104,7 @@
             <td id="horizontalAcc0"></td>
             <td id="verticalAcc0"></td>
             <td id="altitude0"></td>
+            <td id="cellId0"></td>
         </tr>
         <tr>
             <td id="dateTime1"></td>
@@ -112,6 +114,7 @@
             <td id="horizontalAcc1"></td>
             <td id="verticalAcc1"></td>
             <td id="altitude1"></td>
+            <td id="cellId1"></td>
         </tr>
         <tr>
             <td id="dateTime2"></td>
@@ -121,6 +124,7 @@
             <td id="horizontalAcc2"></td>
             <td id="verticalAcc2"></td>
             <td id="altitude2"></td>
+            <td id="cellId2"></td>
         </tr>
         <tr>
             <td id="dateTime3"></td>
@@ -130,6 +134,7 @@
             <td id="horizontalAcc3"></td>
             <td id="verticalAcc3"></td>
             <td id="altitude3"></td>
+            <td id="cellId3"></td>
         </tr>
         <tr>
             <td id="dateTime4"></td>
@@ -139,6 +144,7 @@
             <td id="horizontalAcc4"></td>
             <td id="verticalAcc4"></td>
             <td id="altitude4"></td>
+            <td id="cellId4"></td>
         </tr>
         <tr>
             <td id="dateTime5"></td>
@@ -148,6 +154,7 @@
             <td id="horizontalAcc5"></td>
             <td id="verticalAcc5"></td>
             <td id="altitude5"></td>
+            <td id="cellId5"></td>
         </tr>
         <tr>
             <td id="dateTime6"></td>
@@ -157,6 +164,7 @@
             <td id="horizontalAcc6"></td>
             <td id="verticalAcc6"></td>
             <td id="altitude6"></td>
+            <td id="cellId6"></td>
         </tr>
         <tr>
             <td id="dateTime7"></td>
@@ -166,6 +174,7 @@
             <td id="horizontalAcc7"></td>
             <td id="verticalAcc7"></td>
             <td id="altitude7"></td>
+            <td id="cellId7"></td>
         </tr>
     </tbody>
 </table>
