--- a/views/resultOfTests.hbs
+++ b/views/resultOfTests.hbs
@@ -7,8 +7,10 @@
         <tr>
             <th>Correctness of location</th>
             <th>Total share of unknown</th>
+            <th>Total share of error: accuracy bigger 200m</th>
             <th>Correctness of railway tagging</th>
             <th>Share of unknown in wrong railway tagging</th>
+            <th>Share of error: accuracy bigger 200m in railway tagging</th>
             <th>Correctness of street tagging</th>
             <th>Share of unknown in wrong street tagging</th>
             <th>Correctness of building tagging</th>
@@ -19,8 +21,10 @@
         <tr>
             <td>{{location}} %</td>
             <td>{{totalUnknown}} %</td>
+            <td>{{totalError200}} %</td>
             <td>{{railwayCorrect}} %</td>
             <td>{{railwayUnknown}} %</td>
+            <td>{{railwayError200}} %</td>
             <td>{{streetCorrect}} %</td>
             <td>{{streetUnknown}} %</td>
             <td>{{buildingCorrect}} %</td>
