--- a/views/testingIndex.hbs
+++ b/views/testingIndex.hbs
@@ -7,6 +7,7 @@
         <option value="v2.1">v2.1</option>
         <option value="v3.0">v3.0</option>
         <option value="v4.0">v4.0</option>
+        <option value="v5.0">v5.0</option>
     </select>
     <br>
     <input id="startTestButton" type="submit" value="Testen" />
