--- a/views/testingIndex.hbs
+++ b/views/testingIndex.hbs
@@ -8,6 +8,7 @@
         <option value="v3.0">v3.0</option>
         <option value="v4.0">v4.0</option>
         <option value="v5.0">v5.0</option>
+        <option value="v5.1">v5.1</option>
     </select>
     <br>
     <input id="startTestButton" type="submit" value="Testen" />
